--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <span class="fs-4">Бурге<b>R</b></span>
             </a>
             <div class="col-md-3 text-end">
+                <button type="button" class="btn btn-outline-secondary btn-sm me-4" data-bs-toggle="modal" data-bs-target="#OrderModal">Order</button>
                 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Войти</button>
             </div>
         </div>
@@ -50,7 +51,7 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#ProductModal">
                         <img src="./assets/img/burger.jpg" class="card-img-top" alt="Бургер">
                     </a>
-                    <div class="card-body">
+                    <div class="card-body rounded-bottom">
                         <h5 class="card-title">Говяжая страсть</h5>
                         <p class="card-text">Котлета из говядины, помидоры, лук, сыр чеддер, огурчики, лист салата, кетчуп</p>
                         <div class="d-flex justify-content-between align-items-center">
@@ -350,7 +351,7 @@
 
 <!--    Product Modal-->
     <div class="modal fade" id="ProductModal" tabindex="-1" aria-labelledby="ProductModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content rounded-4 shadow">
                 <div class="modal-header p-3 border-bottom-0">
                     <h4 class="fw-bold mb-0 fs-2">Говяжая страсть</h4>
@@ -474,13 +475,130 @@
                     </div>
                 </div>
                 <hr class="mb-3">
-                <button type="button" class="btn btn-primary btn-lg">Оформить заказ</button>
+                <button type="button"
+                        class="btn btn-primary btn-lg"
+                        data-bs-dismiss="offcanvas"
+                        onclick="startOrder()">
+                    Оформить заказ</button>
+            </div>
+        </div>
+    </div>
+
+<!--    Order Modal-->
+    <div class="modal fade order-modal" id="OrderModal" tabindex="-1" aria-labelledby="OrderModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content rounded-4 shadow">
+                <div class="modal-header p-3 border-bottom-0">
+                    <h4 class="fw-bold mb-0 fs-4">Оформить заказ</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body p-3 pt-0 d-flex flex-column gap-3">
+                    <div class="row pb-3">
+                        <div class="col-4">
+                            <label for="firstName" class="form-label">Имя</label>
+                            <input type="text" class="form-control" id="firstName" placeholder="" value="" required="">
+                            <div class="invalid-feedback">Введите Ваше Имя</div>
+                        </div>
+                        <div class="col-4">
+                            <label for="tel" class="form-label">Телефон</label>
+                            <input type="tel" class="form-control" id="tel" placeholder="+7(000)000-00-00" value="" required="">
+                            <div class="invalid-feedback">Укажите номер мобильного телефона</div>
+                        </div>
+                        <div class="col-4">
+                            <label for="email" class="form-label">Эл. почта</label>
+                            <input type="email" class="form-control" id="email" placeholder="name@site.ru" value="" required="">
+                            <div class="invalid-feedback">Укажите адрес эл. почты</div>
+                        </div>
+                    </div>
+                    <div class="type-delivery">
+                        <ul class="nav nav-tabs" id="typeDelivery">
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link active"
+                               id="deliveryTab"
+                               data-bs-toggle="tab"
+                               aria-controls="tab-delivery"
+                               data-bs-target="#tab-delivery"
+                               aria-selected="true">
+                                Доставка</a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link"
+                               id="personTab"
+                               data-bs-toggle="tab"
+                               aria-controls="tab-person"
+                               data-bs-target="#tab-person"
+                               aria-selected="true">
+                                Самовывоз</a>
+                        </li>
+                    </ul>
+                        <div class="tab-content border-bottom border-end border-start rounded-bottom p-3 bg-light" id="typeDeliveryContetn" >
+                        <div class="tab-pane fade show active" id="tab-delivery" role="tabpanel" aria-labelledby="tab-delivery" tabindex="0">
+                            <div>
+                                <label for="adress" class="form-label">Адрес доставки</label>
+                                <input type="text" class="form-control" id="adress" placeholder="Улица, дом, квартира" value="" required="">
+                                <div class="invalid-feedback">Укажите номер мобильного телефона</div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-4">
+                                    <input type="text" class="form-control" id="flor" placeholder="Подъезд" value="" required="">
+                                </div>
+                                <div class="col-4">
+                                    <input type="text" class="form-control" id="entranca" placeholder="Этаж" value="" required="">
+                                </div>
+                                <div class="col-4">
+                                    <input type="text" class="form-control" id="intercom" placeholder="Код домофона" value="" required="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="tab-person" role="tabpanel" aria-labelledby="tab-person" tabindex="0">
+                            <p>Адрес ресторана: <b>Толбухина, д.2</b></p>
+                            <p>Режим работы: Пн-Пт: 9:00-21:00, Сб-Вс: 10:00-23:00</p>
+                            <p>Забрать заказ можно только после подверждения администратом.<br>
+                                К вам поступит звонок, а после статус заказа сменится на "Приготовление"</p>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="type-pay">
+                        <h4>Оплата</h4>
+                        <div class="list-group list-group-horizontal mx-0 w-auto">
+                            <label class="list-group-item w-50 d-flex gap-2">
+                                <input class="form-check-input flex-shrink-0" type="radio" name="listGroupRadios"
+                                       id="listGroupRadios1" value="" checked="">
+                                <span>
+
+                                    Картой курьеру
+                                    <small class="d-block text-muted">Оплата через терминал при получении заказа</small>
+                                </span>
+                            </label>
+                            <label class="list-group-item w-50 d-flex gap-2">
+                                <input class="form-check-input flex-shrink-0" type="radio" name="listGroupRadios"
+                                       id="listGroupRadios2" value="">
+                                <span>
+                                    Наличными курьеру
+                                    <small class="d-block text-muted">Оплата наличными, при получении заказа</small>
+                                </span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center bg-primary bg-gradient text-white p-3 mt-4 rounded">
+                        <div>
+                            <p>3 товара на сумму 685 руб.</p>
+                            <p class="mb-0">Доствка 0 руб.</p>
+                        </div>
+                        <div>
+                            <button class="btn btn-light">
+                                Отправить на кухню
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
 <!--    Scripts-->
+    <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
+    <script src="./assets/bootstrap/js/bootstrap.bundle.js" type="text/javascript"></script>
     <script src="./assets/js/main.js" type="text/javascript"></script>
-<script src="./assets/bootstrap/js/bootstrap.bundle.js" type="text/javascript"></script>
 </body>
 </html>
