feat: add profile page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <span class="fs-4">Бурге<b>R</b></span>
             </a>
             <div class="col-md-3 text-end">
+                <a  href="./profile.html" class="btn btn-outline-secondary btn-sm me-4">Profile</a>
                 <button type="button" class="btn btn-outline-secondary btn-sm me-4" data-bs-toggle="modal" data-bs-target="#OrderModal">Order</button>
                 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#loginModal">Войти</button>
             </div>
