--- a/index.html
+++ b/index.html
@@ -396,11 +396,18 @@
                             </div>
                         </div>
                         <p class="fs-3 mt-4">390 р.</p>
-                        <button class="btn btn-primary mb-4 mx-auto">
+                        <div class="d-flex justify-content-between align-items-center mb-4">
+                            <div class="input-group product_count">
+                                <button class="btn btn-sm btn-outline-secondary">-</button>
+                                <input type="number" value="1" class="form-control form-control-sm text-center">
+                                <button class="btn btn-sm btn-outline-secondary">+</button>
+                            </div>
+                        <button class="btn btn-primary mx-auto">
                             <svg class="me-2" width="1.3rem" height="1.3rem" fill="white">
                                 <use xlink:href="./assets/ico/bootstrap-icons.svg#cart"/>
                             </svg>
                             Добавить в корзину</button>
+                        </div>
                     </div>
 
                 </div>
